--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "hyperf/http-server": "~1.0.0",
         "hyperf/logger": "~1.0.0",
         "hyperf/memory": "~1.0.0",
-        "hyperf/paginator": "~1.0.0",
+        "hyperf/paginator": "^1.0",
         "hyperf/pool": "~1.0.0",
         "hyperf/process": "~1.0.0",
         "hyperf/redis": "~1.0.0",
