--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": ">=7.2",
         "ext-swoole": ">=4.2",
+        "ext-json": "*",
         "hyperf/cache": "~1.0.0",
         "hyperf/command": "~1.0.0",
         "hyperf/config": "~1.0.0",
