--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-APP_NAME=skeleton
+APP_NAME=my-backed
 
 DB_DRIVER=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=minbaby
+
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
