--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,12 @@ services:
   mysql:
     image: mysql:8
     command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    volumes:
+      - mysql
     environment:
       - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=minbaby
     ports:
-      - 3306:3306
+      - 3307:3306
+volumes:
+  mysql:
