--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,9 @@ services:
       - MYSQL_DATABASE=minbaby
     ports:
       - 3307:3306
+  zipkin:
+    image: openzipkin/zipkin
+    ports:
+      - 9411:9411
 volumes:
   mysql:
