--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,26 @@
 version: '3'
 services:
   app:
-    build: .
+    build: ${VOL_APP:-.}
     volumes:
       - ${VOL_APP:-.}/:/opt/www
     ports:
       - 9501:9501
   redis:
     image: redis
+    volumes:
+      - ${VOL_REDIS:-.docker-data/redis}:/data
   mysql:
     image: mysql:8
     command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
-      - mysql
+      - ${VOL_MYSQL:-.docker-data/mysql}:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=minbaby
     ports:
       - 3307:3306
-  zipkin:
-    image: openzipkin/zipkin
-    ports:
-      - 9411:9411
-volumes:
-  mysql:
+#  zipkin:
+#    image: openzipkin/zipkin
+#    ports:
+#      - 9411:9411
