--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "hyperf/model-cache": "~1.0.0",
         "hyperf/tracer": "^1.0",
         "hyperf/crontab": "^1.0",
-        "hyperf/task": "^1.0"
+        "hyperf/task": "^1.0",
+        "hyperf/websocket-server": "^1.0"
     },
     "require-dev": {
         "swoft/swoole-ide-helper": "^4.2",
