--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   app:
-    build: ${VOL_APP:-.}
+    build:
+      context: ${VOL_APP:-.}
+      dockerfile: Dockerfile.test
     volumes:
       - ${VOL_APP:-.}/:/opt/www
     ports:
@@ -11,16 +13,16 @@ services:
     image: redis
     volumes:
       - ${VOL_REDIS:-.docker-data/redis}:/data
-  mysql:
-    image: mysql:8
-    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-    volumes:
-      - ${VOL_MYSQL:-.docker-data/mysql}:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=minbaby
-    ports:
-      - 3307:3306
+#  mysql:
+#    image: mysql:8
+#    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+#    volumes:
+#      - ${VOL_MYSQL:-.docker-data/mysql}:/var/lib/mysql
+#    environment:
+#      - MYSQL_ROOT_PASSWORD=123456
+#      - MYSQL_DATABASE=minbaby
+#    ports:
+#      - 3307:3306
 #  zipkin:
 #    image: openzipkin/zipkin
 #    ports:
